# pixel-gantry-extra

./: .gitignore  CMakeLists.txt  LVTest.vi  README.md  test_Database.cpp  vision.h
Camera/: camera.cpp  camera.h  capture.cpp  capture.h  interface.cpp  interface.h  test_camera.cpp
Camera/escapi/: capture.cpp  capture.h  choosedeviceparam.h  interface.cpp  interface.h  mediamode.h  scopedrelease.h
LV/: pixel-gantry-extra.aliases  pixel-gantry-extra.lvlps  pixel-gantry-extra.lvproj
LV/Database/: Convert chars to strings.vi  DB Component.ctl  DB Float Array.vi  DB Int Array.vi  DB Part.ctl  DB String Array.vi  DB Test.ctl  Database DLL Path.vi  Database.lvlib  check_login.vi  connect.vi  disconnect.vi  finish_transaction.vi  get_schemas.vi  insert_component.vi  insert_test.vi  query_components.vi  query_parts.vi  rollback_transaction.vi  start_transaction.vi  update_component.vi
LV/Database/tests/: test check_login.vi  test get_schemas.vi  test query_components.vi  test query_parts.vi
LV/Utility/: Error Handling.vi  Update Binaries.vi
LV/Vision/: Find Fiducial.vi  Vision DLL Path.vi  Vision.lvlib  calc_focus.vi  camera driver.ctl  camera.ctl  close camera.vi  convert_to_grayscale.vi  crop.vi  escapi_capture_image.vi  escapi_close_camera.vi  escapi_list_cameras.vi  escapi_open_camera.vi  fill.vi  find_circles.vi  find_patches.vi  find_patches_lvalt.vi  find_rects.vi  find_rects_parameters.ctl  fit_focus_gauss.vi  flip.vi  grab image.vi  image properties.vi  list cameras.vi  open camera.vi  resample.vi  save configuration.vi  set_log_file_path.vi  superimpose.vi  ueye allocate image memory.vi  ueye array to image.vi  ueye get image size.vi  wmf_list_cameras.vi  wmf_open_camera.vi
LV/Vision/tests/: calc_focus_test.vi  cameras_test.vi  crop_test.vi  fill_test.vi  find_circles test.vi  find_patches_test.vi  find_rects_test.vi  flip_test.vi  resample_test.vi  superimpose_test.vi
SHA512/: main.cpp  sha512.cpp  sha512_example  test.py
Vision/: vision.h  vision_utils.h
include/: database.h  vision.h  vision_utils.h
src/: camera.cpp  database.cpp  database.h  escapi.cpp  sha512.cpp  test_Database.cpp  test_Vision.cpp  utils.cpp  vision.cpp  vision_utils.cpp
